--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 Portfolio</h2>
                <div class="content">
                    <div class="image">
-<img src="/img/img6.jpeg" alt="" >
+<img src="https://github.com/riverdown1/-reveal-scroll-/blob/main/img/img6.jpeg?raw=true" alt="" >
                    </div>
                    <div class="text-box">
                        <h3>KAISEI KAWASHITA</h3>
