--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h3 class="section-title">About me</h3>
             <div class="content">
                 <div class="image">
-                    <img src="/img/366D3B8D-654A-457D-80C6-1C0BCA1B9357.JPG" alt="">
+                    <img src="https://github.com/riverdown1/-reveal-scroll-/blob/main/img/366D3B8D-654A-457D-80C6-1C0BCA1B9357.JPG?raw=true" alt="">
                 </div>
                 <div class="info">
                     <h4 class="info-title">Description</h4>
