--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               
         </div>
         <div class="image">
-            <img src="/img/034B5D9C-EB0D-49CD-9E3E-17C50977B0A4.JPG" alt="">
+            <img src="https://github.com/riverdown1/-reveal-scroll-/blob/main/img/034B5D9C-EB0D-49CD-9E3E-17C50977B0A4.JPG?raw=true" alt="">
         </div>
     </div>
 </div>
